--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./styles.css" />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Register Form</title>
   </head>
   <body>
-    <form class="register-form">
+    <div class="register-form">
       <h1 class="form-title">Register</h1>
       <div class="form-input">
         <label for="email">Enter Email</label>
@@ -16,11 +18,11 @@
       </div>
       <div class="form-input">
         <label for="password">Enter Password</label>
-        <input id="password" type="password" />
+        <input type="password" />
       </div>
       <div class="form-input">
         <label for="password">Re-enter Password</label>
-        <input id="password" type="password" />
+        <input type="password" />
       </div>
       <div class="captcha">
         <label for="captcha-input">Captcha</label>
@@ -32,14 +34,15 @@
             placeholder="Enter captcha text"
           />
           <button class="captcha-refresh">
-            <i class="fa fa-refresh"></i>
+            <i class="uil uil-refresh"></i>
           </button>
         </div>
       </div>
       <div class="form-input">
         <button id="register-btn">Register</button>
       </div>
-    </form>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
